app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: app
    spec:
      containers:
        - image: localhost:32000/app:v1
          imagePullPolicy: "IfNotPresent"
          name: afs
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
