app-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app-v2
  name: app-v2
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: app-v2
status:
  loadBalancer: {}
